--- a/src/components/tags/TagToken.css
+++ b/src/components/tags/TagToken.css
@@ -9,6 +9,7 @@
   user-select: none;
   outline: none;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .TagBar-tag:focus,
